wp-project/wordpress/wordpress-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - image: wordpress:5.7
        name: wordpress
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
          - name: wp-p-storage
            mountPath: /var/www/html
        volumes:
        - name: wp-p-storage
          persistentVolumeClaim:
            claimName: wp-pvc
