wp-project/wordpress/wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
  labels: 
    app: wordpress
  spec: 
    ports:
      - port: 80
    selector: 
      app: wordpress
